qc bug fixes